fix: scrollbar issue

--- a/components/vacay.css
+++ b/components/vacay.css
@@ -96,7 +96,7 @@ input{
 
 * {
     scrollbar-width: thin;
-    scrollbar-color: var(--primary-color) var(--primary-color-light);
+    scrollbar-color: var(--primary-color) var(--primary-color-lighter);
   }
   
   *::-webkit-scrollbar {
@@ -104,13 +104,13 @@ input{
   }
   
   *::-webkit-scrollbar-track {
-    background: var(--primary-color-light);
+    background: var(--primary-color-lighter);
   }
   
   *::-webkit-scrollbar-thumb {
     background-color: var(--primary-color);
     border-radius: 20px;
-    border: 3px solid var(--primary-color-light);
+    border: 3px solid var(--primary-color-lighter);
   }
 
 /* || general styles */
